--- a/tables-data.html
+++ b/tables-data.html
@@ -401,7 +401,7 @@
           </li>
           <li>
             <a href="tables-data.html" class="active">
-              <i class="bi bi-circle"></i><span>vehicle details</span>
+              <i class="bi bi-circle"></i><span>Vehicle details</span>
             </a>
           </li>
         </ul>
@@ -1268,14 +1268,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>CARHUB</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      Designed by <a href="https://bootstrapmade.com/">HASSANMD</a>
     </div>
   </footer><!-- End Footer -->
 
